# SDL_audiolib

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  SDL_audiolib.pc.in  annotated.html  annotated_dup.js  aulib_config.h.in  aulib_version.h.in  class_aulib_1_1_decoder-members.html  class_aulib_1_1_decoder.html  class_aulib_1_1_decoder.js  class_aulib_1_1_decoder_adlmidi-members.html  class_aulib_1_1_decoder_adlmidi.html  class_aulib_1_1_decoder_adlmidi.js  class_aulib_1_1_decoder_bassmidi-members.html  class_aulib_1_1_decoder_bassmidi.html  class_aulib_1_1_decoder_bassmidi.js  class_aulib_1_1_decoder_drflac-members.html  class_aulib_1_1_decoder_drflac.html  class_aulib_1_1_decoder_drflac.js  class_aulib_1_1_decoder_drmp3-members.html  class_aulib_1_1_decoder_drmp3.html  class_aulib_1_1_decoder_drmp3.js  class_aulib_1_1_decoder_drwav-members.html  class_aulib_1_1_decoder_drwav.html  class_aulib_1_1_decoder_drwav.js  class_aulib_1_1_decoder_flac-members.html  class_aulib_1_1_decoder_flac.html  class_aulib_1_1_decoder_flac.js  class_aulib_1_1_decoder_fluidsynth-members.html  class_aulib_1_1_decoder_fluidsynth.html  class_aulib_1_1_decoder_fluidsynth.js  class_aulib_1_1_decoder_modplug-members.html  class_aulib_1_1_decoder_modplug.html  class_aulib_1_1_decoder_modplug.js  class_aulib_1_1_decoder_mpg123-members.html  (+103 more)
.github/workflows/: ci.yml
doxygen/: Doxyfile.in  mainpage.dox
example/: main.cpp
include/: aulib.h  aulib_global.h
include/Aulib/: AudioDecoder.h  AudioDecoderAdlmidi.h  AudioDecoderBassmidi.h  AudioDecoderFluidsynth.h  AudioDecoderModplug.h  AudioDecoderMpg123.h  AudioDecoderMusepack.h  AudioDecoderOpenmpt.h  AudioDecoderOpus.h  AudioDecoderSndfile.h  AudioDecoderVorbis.h  AudioDecoderWildmidi.h  AudioDecoderXmp.h  AudioResampler.h  AudioResamplerSox.h  AudioResamplerSpeex.h  AudioResamplerSrc.h  AudioStream.h  Decoder.h  DecoderAdlmidi.h  DecoderBassmidi.h  DecoderDrflac.h  DecoderDrmp3.h  DecoderDrwav.h  DecoderFlac.h  DecoderFluidsynth.h  DecoderModplug.h  DecoderMpg123.h  DecoderMusepack.h  DecoderOpenmpt.h  DecoderOpus.h  DecoderSndfile.h  DecoderVorbis.h  DecoderWildmidi.h  DecoderXmp.h  Processor.h  Resampler.h  ResamplerSdl.h  ResamplerSox.h  ResamplerSpeex.h  (+2 more)
resampler/: README
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  (+14 more)
src/: AudioDecoder.cpp  AudioDecoderAdlmidi.cpp  AudioDecoderBassmidi.cpp  AudioDecoderFluidsynth.cpp  AudioDecoderModplug.cpp  AudioDecoderMpg123.cpp  AudioDecoderMusepack.cpp  AudioDecoderOpenmpt.cpp  AudioDecoderOpus.cpp  AudioDecoderSndfile.cpp  AudioDecoderVorbis.cpp  AudioDecoderWildmidi.cpp  AudioDecoderXmp.cpp  AudioResampler.cpp  AudioResamplerSox.cpp  AudioResamplerSpeex.cpp  AudioResamplerSrc.cpp  AudioStream.cpp  Buffer.h  Decoder.cpp  DecoderAdlmidi.cpp  DecoderBassmidi.cpp  DecoderDrflac.cpp  DecoderDrmp3.cpp  DecoderDrwav.cpp  DecoderFlac.cpp  DecoderFluidsynth.cpp  DecoderModplug.cpp  DecoderMpg123.cpp  DecoderMusepack.cpp  DecoderOpenmpt.cpp  DecoderOpus.cpp  DecoderSndfile.cpp  DecoderVorbis.cpp  DecoderWildmidi.cpp  DecoderXmp.cpp  Processor.cpp  Resampler.cpp  ResamplerSdl.cpp  ResamplerSox.cpp  (+44 more)
src/missing/: format.h  optional.h  print.h  sdl_load_file_rw.h  string_view.h
src/sdl_mixer_emu/: music.cpp  sdl_mixer_emu.cpp
